[package]
name = "yarer"
version = "0.1.1"
description = "Yarer (Yet another (Rusty||Rpn) expression resolver) is a library for the processing, compilation and evaluation of Reverse Polish mathematical expressions."
repository = "https://github.com/davassi/yarer"
homepage = "https://github.com/davassi/yarer"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Davassi <gianluigi.davassi@gmail.com>"]
categories = ["command-line-interface"]
readme = "README.md"
keywords = [
  "rpn",
  "math",
  "parser",
  "expression",
  "calculator",
]

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
regex = "1.9.3"
rustyline = "12.0.0"
log = "0.4"
env_logger = "0.10.0"
anyhow = "1.0.72"
thiserror = "1.0.44"
lazy_static = "1.4"

[profile.release]
opt-level = 3
debug = true

[[bin]]
name = "yarer"
path = "src/bin/main.rs"

[lib]
name = "yarer"



