[package]
name = "yarer"
version = "0.1.8"
description = "Yarer (Yet Another Rust Expression Resolver) is a library for resolving mathematical expressions. Internally it uses the shunting yard algorithm."
repository = "https://github.com/davassi/yarer"
homepage = "https://github.com/davassi/yarer"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Davassi <gianluigi.davassi@gmail.com>"]
categories = ["command-line-interface","algorithms","mathematics","parsing"]
readme = "README.md"
keywords = [
  "rpn",
  "math",
  "parser",
  "expression",
  "calculator",
]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
once_cell = "1.18.0"
regex = "1.9.3"
rustyline = "13.0.0"
log = "0.4"
env_logger = "0.11.2"
anyhow = "1.0.72"
thiserror = "1.0.44"
lazy_static = "1.4"
dirs = "5.0.1"
num = "0.4.1"
num-bigint = "0.4.4"
num-traits = "0.2.18"
bigdecimal = "0.4.2"

[profile.release]
opt-level = 3
debug = true

[[bin]]
name = "yarer"
path = "src/bin/main.rs"

[lib]
name = "yarer"



